--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h1 class="title is-1 publication-title">GMSF: Global Matching Scene Flow</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://liu.se/en/employee/segma96">YushanZhang</a>,</span>
+              <a href="https://scholar.google.com/citations?user=mvY4rdIAAAAJ&hl=sv">YushanZhang</a>,</span>
             </span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=Ul-vMR0AAAAJ">Johan Edstedt</a>,</span>
@@ -142,10 +142,8 @@
                 <img src="static/images/Framework.png" alt="Source Image" style="width:100%;"/>
             </div>
         </div>
-        <div class="content has-text-justified">
-            <p style="font-size: 15px;">
-              <strong>Method Overview</strong>
-            </p>
+        <div align="center">
+              Method Overview
         </div>
     </div>
     
@@ -180,7 +178,7 @@
         <h2 class="title is-2">Method</h2>
         <div class="content has-text-justified">
           <p>
-            We propose Dense Kernelized Feature Matching (DKM). Our approach consists of three main contributions:
+            We propose Global Matchin Scene Flow (GMSF). Our approach consists of three main contributions:
             <ol>
               <li>A hybrid local-global-cross transformer architecture is introduced to learn accurate and robust feature representations of 3D point clouds.</li>
               <li>Based on the similarity of the hybrid features, we propose to use a global matching process to solve the scene flow estimation.</li>
